# HAR-Insight-Pro

./: .gitignore  BUILDING.md  DESKTOP_APP_GUIDE.md  LICENSE  README.md  USER_GUIDE.md  electron-builder.json  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
electron/: main.cjs  main.js  preload.cjs  preload.js
scripts/: generate-ico.cjs  generate-icons.cjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: HarTable.tsx  HarUploader.tsx  RequestDetails.tsx  SanitizeModal.tsx  Toolbar.tsx
src/lib/: desktop.ts  harUtils.ts  tauriUtils.ts
